# NewsByCountry

./: .gitattributes  README.md  run_app.bat  setup_packages.bat  start_servers.bat
NewsApi/: LICENSE  README.md  index.js  package-lock.json  package.json
NewsApi/routes/: func-getNews.js  news.js  online.js
SummarizationAPI/: main.py  pyproject.toml
server/NewsApi/: package-lock.json
server/NewsApi/routes/: summarization.js
server/SummarizationAPI/: consts.py  downloadImageScript.py  main.py  summarizer.py
webapp/newsapp/: .gitignore  pubspec.yaml
webapp/newsapp/android/app/: build.gradle
webapp/newsapp/ios/Runner/: Info.plist
webapp/newsapp/lib/: main.dart
webapp/newsapp/lib/JSONDeserialization/: news.dart  summary.dart
webapp/newsapp/lib/Pages/: search.dart
webapp/newsapp/test/: widget_test.dart
webapp/newsapp/web/: index.html
webapp/newsapp/windows/: CMakeLists.txt
