[tool.poetry]
name = "summarizationapi"
version = "0.1.0"
description = "An API in python that uses flask. Uses spacy to create summaries of articles."
authors = ["sami-ul <waliul.sami.ahmed@gmail,com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
Flask-Cors = "^3.0.10"
spacy = "^3.3.1"
newspaper3k = "^0.2.8"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.3.0/en_core_web_sm-3.3.0.tar.gz"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
